# qna-rag-chatbot

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
src/app/: evaluator.py  rag_chatbot.py
src/data/: data_ingestion.py  dataset_preprocessing.py
